--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL = mongodb+srv://aakash:aakash@cluster0.t79oumw.mongodb.net/test
-SECRET = kilhor
-PORT = 3000
+MONGODB_URL = sampleurl
+SECRET = sampleenv
+PORT = sampleport
